@@ -1,3 +1,8 @@
+Fri May 27 12:44:32 UTC 2011  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
+          Resolved errors in builds with other DDS vendors then ndds
+
 Thu May 26 20:29:07 UTC 2011  Marcel Smit  <msmit@remedy.nl>
 
         * tests/DAnCE/Progressive_Deployments/run_test.pl:
